src/robot/htmldata/libdoc/libdoc.css
body {
    background: white;
    color: black;
    margin: 0;
    font-family: system-ui, -apple-system;
}

.base-container {
    display: flex;
}

.libdoc-overview {
    height: 100vh;
    display: flex;
    flex-direction: column;
    background: white;
    position: -webkit-sticky; /* Safari */
    position: sticky;
    top: 0;
}

.libdoc-overview h4 {
    margin-bottom: 0.5rem;
    margin-top: 0.5rem;
}

.keyword-search-box {
    display: flex;
    justify-content: space-between;
    height: 30px;
    border: 1px solid #e0e0e2;
    border-radius: 3px;
    margin-top: 0.5rem;
}

#tags-shortcuts-container {
    margin-top: 0.5rem;
    height: 30px;
    border: 1px solid #e0e0e2;
    border-radius: 3px;
}

.search-input {
    flex: 1;
    border: none;
    text-indent: 4px;
}

.clear-search {
    border: none;
}

#shortcuts-container {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.libdoc-details {
    margin-top: 60px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    overflow: auto;
    max-width: 1000px;
}

.libdoc-title {
    position: fixed;
    width: 300px;
    height: 36px;
    padding: 0.5rem;
    margin: 0.5rem;
    display: flex;
    align-items: center;
    text-decoration: none;
    color: black;
}

.hamburger-menu {
    display: none;
    position: fixed;
    z-index: 100;
}

input.hamburger-menu
{
  display: none;
  width: 67px;
  height: 46px;
  position: fixed;
  top: 0;
  right: 0;

  cursor: pointer;

  opacity: 0;
  z-index: 2;

  -webkit-touch-callout: none;
}

span.hamburger-menu
{
  width: 31px;
  height: 2px;
  margin-bottom: 5px;
  position: fixed;
  right: 20px;

  background: black;
  border-radius: 2px;

  z-index: 1;

  transform-origin: 4px 0;

  transition: transform 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.35s ease;
}

span.hamburger-menu-1
{
    top: 14px;
    transform-origin: 0 0;
}

span.hamburger-menu-2
{
    top: 24px;

}

span.hamburger-menu-3
{
    top: 34px;
    transform-origin: 0 100%;
}

input.hamburger-menu:checked ~ span.hamburger-menu-1
{
  opacity: 1;
  transform: rotate(45deg) translate(2px, -3px);
  background: black;
}

input.hamburger-menu:checked ~ span.hamburger-menu-2
{
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

input.hamburger-menu:checked ~ span.hamburger-menu-3
{
  transform: rotate(-45deg) translate(2px, 3px);
  background: #232323;
}

.libdoc-title > svg {
    padding-top: 2px;
    height: 42px;
    width: 42px;
}

.keywords-overview {
    display: flex;
    flex-direction: column;
    height: 0;
    max-height: calc(100vh - 60px - 0.5rem);
    flex: 1;
    border: 1px solid #e0e0e2;
    border-radius: 3px;
    padding-right: 0.5rem;
    padding-left: 0.5rem;
    margin: 60px 0 0.5rem 0.5rem;
}

.shortcuts {
    font-size: 0.9em;
    overflow: auto;
    list-style: none;
    padding-left: 0;
    margin: 0;
    flex: 1;
    max-width: 320px;
}

.shortcuts a {
    display: block;
    text-decoration: none;
    white-space: nowrap;
    color: black;
    padding: 0.5rem;
}

.shortcuts a:hover {
    background: #f3f3f3;
}

.shortcuts a::first-letter {
    font-weight: bold;
    letter-spacing: 0.1em;
}

@media only screen and (max-width: 899px) {
    .libdoc-overview {
        display: none;
    }

    .libdoc-title {
        width: 100%;
        padding: 0.5rem;
        margin: 0;
        border-bottom: 1px solid #e0e0e2;
        background: white;
    }

    .libdoc-title > svg {
        margin-right: 60px;
    }

    .libdoc-details {
        padding-left: 0.5rem;
    }

    input.hamburger-menu {
        display: block;
    }

    .hamburger-menu {
        display: block;
    }

    .hamburger-menu:checked ~ .libdoc-overview {
        display: block;
        position: fixed;
        height: 100vh;
        width: 100vw;
    }

    .keywords-overview {
        border: none;
        margin: 60px 0 0;
    }

    .shortcuts {
        max-width: 100vw;
    }
}

.metadata {
    margin-top: 0.5rem;
 }

.metadata th {
    text-align: left;
    padding-right: 1em;
}
a.name, span.name {
    font-style: italic;
}
.libdoc-details a img {
    border: 1px solid #c30 !important;
}
a:hover, a:active {
    text-decoration: underline;
    color: black;
}
a:hover {
    text-decoration: underline !important;
}

.normal-first-letter::first-letter {
    font-weight: normal !important;
    letter-spacing: 0 !important;
}
.shortcut-list-toggle, .tag-list-toggle {
    margin-bottom: 1em;
    font-size: 0.9em;
}
input.switch {
    display: none;
}
.slider {
    background-color: grey;
    display: inline-block;
    position: relative;
    top: 5px;
    height: 18px;
    width: 36px;
}
.slider:before {
    background-color: white;
    content: "";
    position: absolute;
    top: 3px;
    left: 3px;
    height: 12px;
    width: 12px;
}
input.switch:checked + .slider::before {
    background-color: white;
    left: 21px;
}

.keywords {
    display: flex;
    flex-direction: column;
}
.kw-overview {
    display: flex;
    flex-direction: column;
    justify-content: start;
}
@media only screen and (min-width: 899px) {
    .kw-overview {
        max-width: 400px;
        margin-right: 1.5rem;
    }
}
.kw-docs {
    display: flex;
    flex-direction: column;
    overflow-y: auto;
}
.kw-name:link {
    text-decoration: none;
    color: black;
}
.kw-name:visited {
    text-decoration: none;
    color: black;
}
.kw {
    display: flex;
    align-items: baseline;
    min-width: 250px
}
h4 {
    margin-right: 0.5rem;
}

.keyword-container {
    border: 1px solid #e0e0e2;
    border-radius: 3px;
    padding: 0.5rem 1.0rem 0.5rem 1.0rem;
    margin-bottom: 0.5rem;
    display: flex;
    flex-direction: column;
    scroll-margin-top: 60px;
}

.keyword-container:target {
    box-shadow: 0 0 4px #00c0b5;
}

.keyword-content {
    display: flex;
    flex-direction: column;
}

.kw-row {
    display: flex;
    flex-direction: column;
    text-decoration: none;
    justify-content: start;
    border: 1px solid #e0e0e2;
    border-radius: 3px;
    padding: 0.5rem 1.0rem 0.5rem 1.0rem;
    margin-bottom: 0.5rem;
}
.kw a {
    color: inherit;
    text-decoration: none;
    font-weight: bold;
}
.args {
    min-width: 200px;
}
.args span {
    font-family: monospace;
    background: #f4f4f4;
    padding: 0 0.1em;
}

.args span .highlight {
    background: yellow;
}

.tags {
    display: flex;
    align-items: baseline;
}
.tags a {
    color: inherit;
    text-decoration: none;
    padding: 0 0.1em;
}
.footer {
    font-size: 0.9em;
}
/* Docs originating from HTML and reST are wrapped to divs. */
.doc div > *:first-child {
    margin-top: 0;
}
.doc div > *:last-child {
    margin-bottom: 0;
}
.highlight {
    background: yellow;
}
.no-match {
    color: gray !important;
}

.no-match .kw-name {
    color: gray;
}

